# travel_agency

./: .gitignore  .pre-commit-config.yaml  Dockerfile  dbt_project.yml  pyproject.toml  readme.md  setup.cfg  test.csv  travel_data.parquet
.github/workflows/: ci.yml  push_artifact.yml  test_workflow.yml
data/: travel_data.parquet
dbt/models/staging/web_data/: schema.yml  stg_web-data__master.sql
my_python_code/: fancy_python_code.py
prefect/: ReadMe.md  deployment.py  etl_gcp_to_bq.py  etl_pelikan_to_gcs.py  etl_web_to_gcs.py  notify_japan.py  prefect.yaml
prefect/.prefect/: flows.json
prefect/tasks/: pelikan_scrap.py  prefect_tasks.py
terraform/: .terraform.lock.hcl  main.tf  readme.md  variables.tf
test/: test_fancy_python_function.py
